--- a/views/index.erb
+++ b/views/index.erb
@@ -7,6 +7,7 @@
   <body>
     <input id="text" placeholder="Write then press Enter." autofocus />
     <div id="chat"></div>
+    <div id="user"></div>
 
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src= "chat.js"></script>
