--- a/views/index.erb
+++ b/views/index.erb
@@ -11,6 +11,7 @@
 
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src= "chat.js"></script>
+    <script src= "/js/user.js"></script>
   </body>
 </html>
 
