--- a/views/index.erb
+++ b/views/index.erb
@@ -8,6 +8,9 @@
     <input id="text" placeholder="Write then press Enter." autofocus />
     <div id="chat"></div>
     <div id="user"></div>
+    <form action="/logout" method="get">
+      <button type="submit">Logout</button>
+    </form>
 
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src= "chat.js"></script>
