--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -57,3 +57,21 @@
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
     background-color: #555;
 }
+
+#text.large{
+    width:100%;
+    padding: 2%;
+    border: none;
+    background: #C0C0C0;
+    border-radius: 5px;
+}
+
+.panel-body{
+    overflow: hidden !important;
+    height: 100% !important;
+}
+
+#chat.box{
+    overflow-y: scroll;
+    height: 300px;
+}
