--- a/views/chat.haml
+++ b/views/chat.haml
@@ -11,7 +11,7 @@
         .panel-heading
           %h3
             Public Chat
-            %a.btn.btn-warning.pull-right{:href=>"/logout"} Log Out
+            %a.btn.btn-success.pull-right{:href=>"/logout"} Log Out
         .panel-body  
           #chat.box
         .panel-footer
