--- a/views/chat_response.haml
+++ b/views/chat_response.haml
@@ -1,14 +1,16 @@
-- @updates.each_with_index do |phrase, index|
+- @updates.each do |data|
   %ul.chat
-    -if session[:name] == @user[@index][0]
+    -if session[:name] == data[0]
       %li.user
         %span.text
-          #{phrase}
+          #{data[2]}
         %span.img
-          %img{:src=>"https://placehold.it/48x48/#{@user[@index][1]}/000000/&text=#{@user[@index][0][0..2].upcase}"}
+          %img{:src=>"https://placehold.it/48x48/#{data[1]}/000000/&text=#{data[0][0..2].upcase}"}
     - else
+      %h6.align-right
+        #{data[0]}
       %li
-        %img{:src=>"https://placehold.it/48x48/#{@user[@index][1]}/000000/&text=#{@user[@index][0][0..2].upcase}"}
+        %img{:src=>"https://placehold.it/48x48/#{data[1]}/000000/&text=#{data[0][0..2].upcase}"}
         %span
-          #{phrase}
+          #{data[2]}
 %span#last{"data-last"=>"#{@last}"}
